--- a/bootstrapassignment.html
+++ b/bootstrapassignment.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Jobs</a>
+                        <a class="nav-link" href="#">Jobs </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Job Seeker</a>
@@ -43,7 +43,7 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Read more</a></li>
+                        <li><a class="dropdown-item" href="#">Information</a></li>
                         </ul>
                     </li>
 
